--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,47 +1,57 @@
-<nav class="bg-red-800">
+<nav class="bg-red-900">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
     <div class="relative flex h-16 items-center justify-between">
-      <!-- Mobile menu button -->
-      <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-        <button type="button"
-          class="relative inline-flex items-center justify-center rounded-md p-2 text-white hover:bg-red-950 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
-          aria-controls="mobile-menu" [attr.aria-expanded]="isMobileMenuOpen" (click)="toggleMobileMenu()">
-          <span class="sr-only">Open main menu</span>
-          @if (!isMobileMenuOpen) {
-            <!-- Icon when menu is closed -->
+      <!-- Logo -->
+      <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+        <div class="flex shrink-0 items-center">
+          <img class="h-8 w-auto" src="assets/logo.png" alt="Your Company" />
+        </div>
+
+        <!-- Desktop Menu -->
+        <div class="hidden sm:ml-6 sm:block">
+          <div class="flex space-x-4">
+            @for(menuItem of navigation.menu(); track menuItem.label) {
+              @if(menuItem.path || menuItem.path === '') {
+              <button [routerLink]="menuItem.path"
+                class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-red-950 hover:text-white">
+                {{ menuItem.label }}
+              </button>
+              }
+              @if(menuItem.action) {
+              <button (click)="menuItem.action()"
+                class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-red-950 hover:text-white">
+                {{ menuItem.label }}
+              </button>
+              }
+            }
+            <button (click)="scene.addCharacter()"
+              class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-red-950 hover:text-white">
+              Neuer Charakter
+            </button>
+          </div>
+        </div>
+
+        <!-- Mobile menu button -->
+        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+          <button type="button"
+            class="relative inline-flex items-center justify-center rounded-md p-2 text-white hover:bg-red-950 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+            aria-controls="mobile-menu" [attr.aria-expanded]="navigation.isMobileMenuOpen()" (click)="navigation.toggleMobileMenu()">
+            <span class="sr-only">Open main menu</span>
+            @if (!navigation.isMobileMenuOpen()) {
             <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
               stroke-width="1.5" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
             </svg>
-           } @else {
-            <!-- Icon when menu is open -->
+            } @else {
             <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
               stroke-width="1.5" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
             </svg>
-           }
-        </button>
-      </div>
-
-      <!-- Logo und Desktop-Menü -->
-      <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="flex shrink-0 items-center">
-          <img class="h-8 w-auto" src="assets/logo.png"
-            alt="Your Company" />
-        </div>
-        <div class="hidden sm:ml-6 sm:block">
-          <div class="flex space-x-4">
-            <a href="#"
-              class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-red-950 hover:text-white">Neue Szene</a>
-            <a href="#"
-              class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-red-950 hover:text-white">Hilfe</a>
-            <a href="#"
-              class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-red-950 hover:text-white">App Info</a>
-          </div>
+            }
+          </button>
         </div>
       </div>
 
-      <!-- Benutzer- und Benachrichtigungs-Buttons -->
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         <!-- Profil Dropdown -->
         <div class="relative ml-3">
@@ -58,34 +68,43 @@
           </div>
 
           <!-- Dropdown Menu -->
-           @if(isUserMenuOpen) {
-            <div
-              class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
-              aria-orientation="vertical" aria-labelledby="user-menu-button"
-            >
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Your Profile</a>
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Settings</a>
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"
+          @if(isUserMenuOpen) {
+          <div
+            class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-red-950 py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+            aria-orientation="vertical" aria-labelledby="user-menu-button">
+            <div class="space-y-1 px-1 pb-1 pt-1">
+              <a href="#" class="block rounded-md px-4 py-2 text-sm text-white hover:bg-red-900" role="menuitem">Your
+                Profile</a>
+              <a href="#" class="block rounded-md px-4 py-2 text-sm text-white hover:bg-red-900"
+                role="menuitem">Settings</a>
+              <a href="#" class="block rounded-md px-4 py-2 text-sm text-white hover:bg-red-900" role="menuitem"
                 (click)="openLoginDialog()">Sign out</a>
             </div>
+          </div>
           }
         </div>
       </div>
     </div>
   </div>
-
   <!-- Mobile menu, show/hide based on menu state. -->
-   @if(isMobileMenuOpen) {
-    <div class="sm:hidden" id="mobile-menu">
-      <div class="space-y-1 px-2 pb-3 pt-2">
-        <a href="#"
-          class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-red-950 hover:text-white">Neue Szene</a>
-        <a href="#"
-          class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-red-950 hover:text-white">Hilfe</a>
-        <a href="#"
-          class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-red-950 hover:text-white">App Info</a>
-      </div>
+  @if(navigation.isMobileMenuOpen()) {
+  <div class="sm:hidden bg-red-950" id="mobile-menu">
+    <div class="space-y-1 px-2 pb-3 pt-2">
+      @for(menuItem of navigation.menu(); track menuItem.label) {
+        @if(menuItem.path || menuItem.path === '') {
+        <button [routerLink]="menuItem.path"
+          class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-red-900 hover:text-white">{{
+          menuItem.label }}
+        </button>
+        }
+        @if(menuItem.action) {
+          <button (click)="menuItem.action()"
+            class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-red-900 hover:text-white">
+            {{ menuItem.label }}
+          </button>
+        }
+      }
     </div>
-   }
-  
+  </div>
+  }
 </nav>
